# cpp_template

./: CMakeLists.txt  README.md
include/: something.h
src/: something.cpp
{{cookiecutter.project_name}}/: CMakeLists.txt  cookiecutter.json  justfile
{{cookiecutter.project_name}}/scripts/: build_ninja.bat  set_vcvars.ps1
